--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.5.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.20.2",
@@ -20,6 +21,8 @@
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
     "razorpay": "^2.9.2",
-    "sequelize": "^6.33.0"
+    "sequelize": "^6.33.0",
+    "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^9.0.1"
   }
 }
